GPv3: crash when connecting vertices in edit mode #117833

Closed
opened 2024-02-05 11:51:16 +01:00 by Lukas Tönne · 0 comments
Member

System Information
Operating system: Linux-6.7.2-gentoo-r1-x86_64-AMD_Ryzen_9_7950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 17.0.6, DRM 3.56, 6.7.2-gentoo-r1) AMD 4.6 (Core Profile) Mesa 23.3.4

Blender Version
Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: n/a

Short description of error
Grease Pencil 3 drawing code crashes after connecting loose vertices in edit mode using F key.

Exact steps for others to reproduce the error
Open test file, press F key.

or

  1. Enable Grease Pencil 3 (Experimental settings)
  2. Make a default Stroke object
  3. Select one vertex and duplicate it (shift D)
  4. Select old and new vertex, press F to connect
**System Information** Operating system: Linux-6.7.2-gentoo-r1-x86_64-AMD_Ryzen_9_7950X_16-Core_Processor-with-glibc2.38 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (radeonsi, navi31, LLVM 17.0.6, DRM 3.56, 6.7.2-gentoo-r1) AMD 4.6 (Core Profile) Mesa 23.3.4 **Blender Version** Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: n/a **Short description of error** Grease Pencil 3 drawing code crashes after connecting loose vertices in edit mode using F key. **Exact steps for others to reproduce the error** Open test file, press F key. or 1. Enable Grease Pencil 3 (Experimental settings) 2. Make a default Stroke object 3. Select one vertex and duplicate it (shift D) 4. Select old and new vertex, press F to connect
Lukas Tönne added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-05 11:51:17 +01:00
Lukas Tönne added this to the Grease Pencil project 2024-02-05 11:51:59 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2024-02-05 14:47:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117833
No description provided.